# TUI

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DESIGN_CONCEPTS.md  PRODUCTION_READINESS_REPORT.md  README.md  config.toml  test_gpu.ps1  test_gpu_wmi.ps1  test_nvidia_smi.ps1
.claude/: settings.local.json
src/: main.rs
src/app/: config.rs  mod.rs  monitors_task.rs  state.rs  tabs.rs
src/events/: mod.rs
src/integrations/: linux_sys.rs  mod.rs  ollama.rs  powershell.rs
src/monitors/: cpu.rs  disk.rs  disk_analyzer.rs  gpu.rs  mod.rs  network.rs  processes.rs  ram.rs  services.rs
src/ui/: mod.rs  theme.rs
src/ui/tabs/: cpu.rs  disk.rs  disk_analyzer.rs  gpu.rs  mod.rs  network.rs  ollama.rs  processes.rs  ram.rs  services.rs  settings.rs
src/ui/widgets/: graph.rs  mod.rs  monitor_status.rs  radial_menu.rs
src/utils/: command_history.rs  format.rs  json.rs  mod.rs
